--- a/src/style.css
+++ b/src/style.css
@@ -1,21 +1,24 @@
 body {
-    margin: 0;
-    padding:0;
-    font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
 }
 
 .text-truncate {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 1; /* Number of lines to show before truncating */
-    -webkit-box-orient: vertical;
-  }
-  .text-truncate-para {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 2; /* Number of lines to show before truncating */
-    -webkit-box-orient: vertical;
-  }
- 
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1; /* Number of lines to show before truncating */
+  -webkit-box-orient: vertical;
+}
+.text-truncate-para {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2; /* Number of lines to show before truncating */
+  -webkit-box-orient: vertical;
+}
+.chart-container {
+  height: 60vh;
+  width: 540px;
+}
