styled the div* to align spinner in center

--- a/src/style.css
+++ b/src/style.css
@@ -29,3 +29,10 @@ body {
   -moz-background-clip: text;
   -moz-text-fill-color: transparent;
 }
+.loader-container {
+  height: 85vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
