--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,15 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  overflow-x: hidden;
 }
+/* html, body, #root, #app>div {
+  height: 1% !important;
+} */
+/* #root {
+  height: 100vh !important;
+  overflow-x: hidden;
+} */
 
 .text-truncate {
   overflow: hidden;
@@ -41,3 +49,24 @@ body {
   width: 100%;
   max-width: 250px;
 }
+.main-text {
+  font-size: 80px;
+  margin-left: 40px;
+  color: white;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 200;
+}
+.highlight {
+  background: linear-gradient(120deg, #d48d5a 0%, #d48d5a 100%);
+  background-repeat: no-repeat;
+  background-size: 100% 40%;
+  background-position: 0 90%;
+}
+
+@media screen and (max-width: 700px){
+  .main-text {
+    font-size: 45px;
+  }
+}
+
+
