--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,4 @@
 @import "@fontsource/poppins";
-*,
-*:before,
-*:after {
-  padding: 0;
-  margin: 0;
-}
 
 body {
   margin: 0;
@@ -12,9 +6,7 @@ body {
   font-family: sans-serif;
   overflow-x: hidden;
   font-family: "Poppins", sans-serif;
-
 }
-
 
 .text-truncate {
   overflow: hidden;
@@ -71,29 +63,58 @@ body {
 .wrapper {
   box-sizing: content-box;
 
-  height: 70px;
   padding: 50px 30px;
   display: flex;
   border-radius: 8px;
   color: white;
   font-size: 45px;
   font-weight: 600;
-
+  display: flex;
 }
 span {
   display: block;
-  
   height: 100%;
-  padding-left: 10px;
-  animation: spin_words 2.5s infinite forwards;
-  color: #92a2d0;
-
-
-}
-.words {
   overflow: hidden;
+  padding-left: 10px;
+  animation: spin_words 2.6s infinite forwards;
+  color: #92a2d0;
+}
+/* span, span::before, span::after, .wrapper, .wrapper::before,.wrapper::after, .main-area, .main-area::before, .main-area::after {
+  margin: 0;
+  padding: 0;
+} */
+.words {
+  overflow-y: hidden;
+  height: 30%;
+  margin-top: 45px;
+  /* border: 2px solid red */
+}
+.signin-btn {
+  border: none;
+  background: white;
+  cursor: pointer;
+  padding: 18px;
+  border-radius: 12px;
+  font-weight: 600;
+  font-size: 16px;
 }
 
+@media screen and (max-width: 800px) {
+  .wrapper {
+    font-size: 20px;
+    flex-direction: column;
+  }
+  span {
+    padding-left: 0;
+  }
+  .signin-btn {
+    font-size: 14px;
+    padding: 9px;
+  }
+  .words {
+    margin-top: -20px;
+  }
+}
 @keyframes spin_words {
   33% {
     transform: translateY(-100%);
@@ -104,11 +125,5 @@ span {
 
   100% {
     transform: translateY(-300%);
-  }
-}
-
-@media screen and (max-width: 700px) {
-  .main-text {
-    font-size: 45px;
   }
 }
