--- a/src/style.css
+++ b/src/style.css
@@ -71,7 +71,7 @@ body {
   font-weight: 600;
   display: flex;
 }
-span {
+.words_text {
   display: block;
   height: 100%;
   overflow: hidden;
@@ -104,7 +104,7 @@ span {
     font-size: 20px;
     flex-direction: column;
   }
-  span {
+  .words_text {
     padding-left: 0;
   }
   .signin-btn {
